RESOLVED FIXED304948
Fix typo in RenderBox::computeInlineDirectionMargins where `marginEnd` still calls `InlineStart` rather than `InlineEnd`
https://bugs.webkit.org/show_bug.cgi?id=304948
Summary Fix typo in RenderBox::computeInlineDirectionMargins where `marginEnd` still ...
Ahmad Saleem
Reported 2026-01-05 11:31:28 PST
SSIA
Attachments
Ahmad Saleem
Comment 1 2026-01-05 11:31:39 PST
Ahmad Saleem
Comment 2 2026-01-05 11:34:54 PST
EWS
Comment 3 2026-01-05 14:17:47 PST
Committed 305122@main (ba64ba88e373): <https://commits.webkit.org/305122@main> Reviewed commits have been landed. Closing PR #56097 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.