Fix typo in RenderBox::computeInlineDirectionMargins where `marginEnd` still calls `InlineStart` rather than `InlineEnd` https://bugs.webkit.org/show_bug.cgi?id=304948 rdar://167045668

Reviewed by Alan Baradlay.

This code was added in 258563@main and I think due to copy paste, this
typo happened and this patch addresseses it and make `marginEnd` call
`InlineEnd` rather than `InlineStart`.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeInlineDirectionMargins const):

Canonical link: https://commits.webkit.org/305122@main